syntax = "proto3";
package kira.gov;

import "gogoproto/gogo.proto";

option go_package = "github.com/KiraCore/sekai/x/gov/types";

message ExecutionFee {
    string transaction_type = 1; // Type of the transaction that given permission allows to execute
    uint64 execution_fee = 2; // How much user should pay for executing this specific function
    uint64 failure_fee = 3; // How much user should pay if function fails to execute
    uint64 timeout = 4; // After what time function execution should fail
    uint64 default_parameters = 5; // Default values that the function in question will consume as input parameters before execution
}

message MsgSetExecutionFee {
    string transaction_type = 1;
    uint64 execution_fee = 2;
    uint64 failure_fee = 3;
    uint64 timeout = 4;
    uint64 default_parameters = 5;
    bytes proposer = 6 [
      (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
    ];
}
  